src/tests/fixtures/arguments/PromiseArgument.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export default class Query {
  /** @gqlField */
  hello(args: { greeting: Promise<string> }): string {
    return `${args.greeting} world!`;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/PromiseArgument.invalid.ts:4:27 - error: This type is not a valid GraphQL type. Did you mean to annotate it's definition with a `/** @gql */` tag such as `/** @gqlType */` or `/** @gqlInput **/`?

4   hello(args: { greeting: Promise<string> }): string {
                            ~~~~~~~~~~~~~~~
